--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "log-panics"
 version = "0.1.0"
 authors = ["Steven Fackler <sfackler@gmail.com>"]
+license = "MIT/Apache-2.0"
+description = "A panic hook which logs panic messages rather than printing them"
+repository = "https://github.com/sfackler/rust-log-panics"
+documentation = "https://sfackler.github.io/rust-log-panics/doc/v0.1.0/log_panics"
+readme = "README.md"
 
 [features]
 with-backtrace = ["backtrace"]
