--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ backtrace = { version = "0.3", optional = true }
 
 [dev-dependencies]
 env_logger = "0.7"
+
+[package.metadata."docs.rs"]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
